@@ -1,3 +1,7 @@
+2011-02-25 Alex Tutubalin <lexa@lexa.ru>
+	* Sony A390 support (colordata from A380)
+	* Leica D-LUX 4: fixed typo in camera name in colordata
+
 2011-02-15 Alex Tutubalin <lexa@lexa.ru>
 	* New -mem option for dcraw_emu: I/O via allocated buffer
 	* Removed debug printf from LibRaw_memory_buffer code
